# RustWidgets

./: Cargo.toml  README.md
config/: config.toml
src/: main.rs
src/core/: events.rs  mod.rs  scheduler.rs  widget_manager.rs
src/renderer/: html_renderer.rs  layout.rs  mod.rs  style.rs
src/utils/: config_parser.rs  file_loader.rs  mod.rs
