[package]
name = "RustWidgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Para crear ventanas y renderizar HTML/CSS
gtk = "0.18"
webkit2gtk = "2.0"

# Para configuración
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Para sistema de archivos y gestión
notify = "6.0"  # Para watch de archivos
walkdir = "2.4"

# Para async/concurrencia
tokio = { version = "1", features = ["full"] }

# Para logs
log = "0.4"
env_logger = "0.11"

# Para utilidades
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1